kube/rails-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: rails
  name: rails
  namespace: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rails
  template:
    metadata:
      labels:
        app: rails
    spec:
      containers:
        - name: rails
          image: seemiller/demo:latest
          ports:
            - containerPort: 3000
