kube/rails-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rails
  name: rails
  namespace: demo
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app: rails
  sessionAffinity: None
  type: ClusterIP
